fix scrollbar getting hidden under header

--- a/packages/finlabs-wiseguy/client/stylesheets/wiseguy.less
+++ b/packages/finlabs-wiseguy/client/stylesheets/wiseguy.less
@@ -1,5 +1,9 @@
 .wiseguy-wrap {
 
+	.flex-tab .content& {
+		overflow-y: hidden;
+	}
+
 	.new-day {
 		&:before {
 			content: attr(data-date);
@@ -31,6 +35,7 @@
 
 .wiseguy-alert-list {
 	padding: 105px 0;
+	margin-top: 70px;
 
 	.col-1, .col-3, .col-4 {
 		position: relative;
@@ -87,7 +92,7 @@
 	.new-day {
 		margin: 50px 0;
 		&:first-of-type {
-			margin: 0;
+			margin: -60px 0 0 0;
 			position: relative;
 			bottom: 40px;
 		}
